infra/argo-workflows/argo-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  template:
    spec:
      containers:
      - args:
        - server
        - --auth-mode=server
        - --secure=false
        name: argo-server
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 2746
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
